--- a/challenge-one-portafolio-latam-repositorio-base/style.css
+++ b/challenge-one-portafolio-latam-repositorio-base/style.css
@@ -41,8 +41,32 @@ https://en.bem.info/methodology/quick-start/*/
 
 /*Sección Menu*/
 
-section.menu{
+.tudo{
+    margin: 10%;
+}
 
+.menu{
+    display: inline-flex;
+    white-space: nowrap;
+    margin-bottom: 80px;
+}
+
+.menu__header{
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    margin-right: 10px;
+    padding-right: 75%;
+}
+
+.menu__header img{
+    margin-right: 10px;
+}
+
+.menu__list{
+    display: flex;
+    gap: 15px;
+    float: left;
 }
 
 /*Sección Title*/
